@@ -63,20 +63,22 @@ void SidebarUserItem::drawSprite(
     tgui::CanvasSFML::Ptr& canvas,
     unsigned spriteId,
     const sf::Vector2i& pos,
+    SpawnRotation rotation,
     bool selected,
     float opacity)
 {
     auto&& rd = renderData.at(spriteId);
 
-    auto position = sf::Vector2f(
-        float(int(pos.x) - rd.clip.width / 2),
-        float(int(pos.y) - rd.clip.height / 2));
+    auto position = sf::Vector2f(pos);
     rd.sprite.setColor(sf::Color(255, 255, 255, opacity));
     rd.sprite.setPosition(position);
+    rd.sprite.setRotation(std::to_underlying(rotation) * 45.f);
+    rd.sprite.setOrigin(rd.clip.width / 2.f, rd.clip.height / 2.f);
 
     canvas->draw(rd.sprite);
 
     // Outline for selected items
+    outline.setOrigin(rd.clip.width / 2.f, rd.clip.height / 2.f);
     if (selected)
     {
         outline.setPosition(position);
